@@ -67,9 +67,27 @@ class _SelectionWriter(TestCase):
         g.write(self.namedfile, **kwargs)
         return g
 
+    def _write_with(self, **kwargs):
+        g = self._selection()
+        with self.writer(self.namedfile, **kwargs) as outfile:
+            outfile.write(g)
+        return g
+
     def test_write_bad_mode(self):
         with self.assertRaises(ValueError):
             self._write(name=self.ref_name, mode='a+')
+
+    def test_write(self):
+        self._write(name=self.ref_name)
+        self._assert_selectionstring()
+
+    def test_writeselection(self):
+        self._write_selection(name=self.ref_name)
+        self._assert_selectionstring()
+
+    def test_write_with(self):
+        self._write_with(name=self.ref_name)
+        self._assert_selectionstring()
 
 def ndx2array(lines):
     """Convert Gromacs NDX text file lines to integer array"""
@@ -82,6 +100,7 @@ def lines2one(lines):
 
 
 class TestSelectionWriter_Gromacs(_SelectionWriter):
+    writer = MDAnalysis.selections.gromacs.SelectionWriter
     filename = "CA.ndx"
     ref_name = "CA_selection"
     ref_indices = ndx2array(
@@ -90,7 +109,7 @@ class TestSelectionWriter_Gromacs(_SelectionWriter):
           ]
         )
 
-    def _assert_indices(self):
+    def _assert_selectionstring(self):
         header = self.namedfile.readline().strip()
         assert_equal(header, "[ {0} ]".format(self.ref_name),
                      err_msg="NDX file has wrong selection name")
@@ -98,16 +117,10 @@ class TestSelectionWriter_Gromacs(_SelectionWriter):
         assert_array_equal(indices, self.ref_indices,
                            err_msg="indices were not written correctly")
 
-    def test_write_ndx(self):
-        self._write(name=self.ref_name)
-        self._assert_indices()
-
-    def test_writeselection_ndx(self):
-        self._write_selection(name=self.ref_name)
-        self._assert_indices()
 
 
 class TestSelectionWriter_Charmm(_SelectionWriter):
+    writer = MDAnalysis.selections.charmm.SelectionWriter
     filename = "CA.str"
     ref_name = "CA_selection"
     ref_selectionstring = lines2one([
@@ -126,16 +139,10 @@ class TestSelectionWriter_Charmm(_SelectionWriter):
         assert_equal(selectionstring, self.ref_selectionstring,
                      err_msg="Charmm selection was not written correctly")
 
-    def test_write_str(self):
-        self._write(name=self.ref_name)
-        self._assert_selectionstring()
-
-    def test_writeselection_str(self):
-        self._write_selection(name=self.ref_name)
-        self._assert_selectionstring()
 
 
 class TestSelectionWriter_PyMOL(_SelectionWriter):
+    writer = MDAnalysis.selections.pymol.SelectionWriter
     filename = "CA.pml"
     ref_name = "CA_selection"
     ref_selectionstring = lines2one([
@@ -151,16 +158,10 @@ class TestSelectionWriter_PyMOL(_SelectionWriter):
         assert_equal(selectionstring, self.ref_selectionstring,
                      err_msg="PyMOL selection was not written correctly")
 
-    def test_write_pml(self):
-        self._write(name=self.ref_name)
-        self._assert_selectionstring()
-
-    def test_writeselection_pml(self):
-        self._write_selection(name=self.ref_name)
-        self._assert_selectionstring()
 
 
 class TestSelectionWriter_VMD(_SelectionWriter):
+    writer = MDAnalysis.selections.vmd.SelectionWriter
     filename = "CA.vmd"
     ref_name = "CA_selection"
     ref_selectionstring = lines2one([
@@ -174,13 +175,6 @@ class TestSelectionWriter_VMD(_SelectionWriter):
         assert_equal(selectionstring, self.ref_selectionstring,
                      err_msg="PyMOL selection was not written correctly")
 
-    def test_write_vmd(self):
-        self._write(name=self.ref_name)
-        self._assert_selectionstring()
-
-    def test_writeselection_vmd(self):
-        self._write_selection(name=self.ref_name)
-        self._assert_selectionstring()
 
 
 def spt2array(line):
@@ -190,24 +184,14 @@ def spt2array(line):
 
 
 class TestSelectionWriter_Jmol(_SelectionWriter):
+    writer = MDAnalysis.selections.jmol.SelectionWriter
     filename = "CA.spt"
     ref_name, ref_indices = spt2array(
         ( '@~ca ({4 21 45 64 83 102 121 128 140 152 159 169 176 198 205 219 236'
           ' 246 263 283 302 319 334 356});')
         )
 
-    def test_write_spt(self):
-        self._write(name=self.ref_name)
-
-        header, indices = spt2array(self.namedfile.readline())
-        assert_equal(header, self.ref_name,
-                     err_msg="SPT file has wrong selection name")
-        assert_array_equal(indices, self.ref_indices,
-                           err_msg="SPT indices were not written correctly")
-
-    def test_writeselection_spt(self):
-        self._write_selection(name=self.ref_name)
-
+    def _assert_selectionstring(self):
         header, indices = spt2array(self.namedfile.readline())
         assert_equal(header, self.ref_name,
                      err_msg="SPT file has wrong selection name")
